examples/test/testpolicy13735.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13735
  namespace: namespace143
spec:
  podSelector:
    matchLabels:
      key45: value40
      key13: value2
      key14: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value31
      podSelector:
        matchLabels:
          key21: value10
          key48: value24
          key6: value6
